<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fudanBBS</string>
    <string name="top10board">本日十大</string>
    <string name="recommendboard">推荐版面</string>
    <string name="classfiedboard">分类讨论区</string>
    <string name="allboard">全部讨论区</string>
    <string name="myfavorite">我的收藏</string>
    <string name="mymail">我的信件</string>    
    <string name="mypreference">个人设置</string>
    <string name="title_section8">查找选项</string>        
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="username">用户名</string>
    <string name="password">密 码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="login">登 录</string>
    <string name="gologin">立即登录</string>
    <string name="exit">退出</string>
    <string name="welcome">欢迎您~~</string>
    <string name="guestLogin">游客登录</string>    
    <string name="retrievePassword">找回密码</string>
    <string name="register">注 册</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="noAccount">没有账号？</string>    
    <string name="loginSucceed">登录成功</string>
    <string name="accountError">用户名或密码错误，请重试...</string>
    <string name="loginFailed">登录失败</string>
    <string name="connectfailed">无法连接到服务器,请稍微重试</string>
    <string name="loginFailedServerError">登录失败, BBS服务器异常</string>   
    <string name="accountNotNull">用户名或密码不能为空，请重新输入...</string>
    <string name="networkNotAvailable">呜呜，网络不可用，请检查您的网络设置...</string>
	<string name="pageloadfailed">页面加载失败,请重试</string>
    <string name="logining">正在登录，请稍候...</string>
    <string name="loading">正在玩命加载中...</string>  
    <string name="loadingboard">正在玩命加载版面内容...</string> 
    <string name="loadingboardlist">正在玩命加载版面列表...</string>    
    <string name="loadingpostlist">正在玩命加载帖子列表...</string>    
    <string name="loadingpost">正在玩命加载帖子内容...</string>     
    <string name="loadingmail">正在玩命加载邮件内容...</string> 
    <string name="loadingmaillist">正在玩命加载邮件列表...</string>       
    <string name="loadingtop10list">正在玩命加载今日十大...</string>      
    <string name="postingreplymail">正在玩命发送邮件...</string>       
    <string name="loadingpreference">正在玩命加载用户信息...</string>   

    <string name="lastitem">已到最后一页</string>  
    <string name="searchhint">输入版面关键字进行搜索</string>  
    <string name="notloginyet">您尚未登录</string>  
    <string name="notloginmessage">您尚未登录，无法查看本版面</string>    
    <string name="loginpromptmessage">需要登录才能查看本版面，确认登录吗？</string>  
    <string name="reply">回      复</string>  
    <string name="send">发      送</string>  
    <string name="receiver">收件人</string>  
    <string name="mailtitle">邮件主题</string>    
    <string name="sendsucceed">发送成功</string>  
    <string name="sendfailed">发送失败，请稍后重试</string>  
    <string name="nickname">您的昵称</string>  
    <string name="birthday">您的生日</string>  
    <string name="gender">您的性别</string>  
    <string name="logincount">登录次数</string>  
    <string name="onlinetime">在线时长</string>  
    <string name="postcount">发表贴数</string>  
    <string name="accountsince">账号建立时间</string>  
    <string name="lastlogintime">最后登录时间</string>  
    <string name="IPAddress">来源IP地址</string>  
    <string name="uploadattachment">上传附件</string>  
    <string name="board">版面</string>  
    <string name="title">标题</string>  
    <string name="newpost">发表</string>  
    <string name="newposttitle">发表新帖</string>
    <string name="newpostfailed">发表新帖失败</string>
    <string name="attachementsizeerror1">目前本版单个上传文件大小限制为</string>
    <string name="attachementsizeerror2">KB, 允许的文件类型：jpeg/jpg/gif/png/pdf, 您上传的文件大小超过限定, 上传不成功</string>
    <string name="titlenotnull">标题不能为空</string>
    <string name="uploadingattachment">正在上传附件...</string>
    <string name="newposting">新帖发送中...</string>
    <string name="generatenewpostpage">正在生成发新帖页面...</string>
    <string name="uploadattachmentsuccess">附件上传成功！</string>    
    <string name="uploadattachmentfail">附件上传失败！</string> 
    <string name="signature">本帖发送自复旦BBS安卓客户端</string>    
    <string name="newpostsuccess">帖子发表成功！</string> 
    <string name="replytothispost">回复本文</string>    
    <string name="postoperations">对本帖可进行如下操作</string>    
    <string name="replytext1">【 在 </string>   
    <string name="replytext2"> 的大作中提到: 】</string>                       
</resources>
