<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/top10title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="输入用户名" >
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/top10author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="输入密码"
                android:inputType="textPassword" >
            </EditText>            
        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/checkRememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"            
            android:text="@string/rememberpassword" />

        <CheckBox
            android:id="@+id/checkAutoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/autologin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:paddingTop="8sp"
			android:paddingBottom="8sp"
            android:background="@color/fudanNavigation"
            android:text="@string/login"
            android:textColor="@color/lightgray"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/guestLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
	        android:paddingTop="8sp"
			android:paddingBottom="8sp"            
            android:background="@color/lightcoral"
            android:text="@string/guestLogin"
            android:textColor="@color/dimgray"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

            <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:layout_weight="0.5"
        	android:layout_gravity="bottom" >    

            <TextView
                android:id="@+id/top10board"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="false"
                android:layout_alignParentLeft="true"
                android:text="@string/noAccount"
            	android:textAppearance="?android:attr/textAppearanceLarge"/>

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toRightOf="@+id/top10board"
                android:text="@string/register"
                android:textColor="@color/blue"
            	android:textAppearance="?android:attr/textAppearanceLarge"/>

            </RelativeLayout>

    </LinearLayout>


</LinearLayout>
