<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mypreferencelayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
   
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nickname"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/gender"/>

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/logincount"/>

            <TextView
                android:id="@+id/logincount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/onlinetime"/>

            <TextView
                android:id="@+id/onlinetime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/postcount"/>

            <TextView
                android:id="@+id/postcount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/accountsince"/>

            <TextView
                android:id="@+id/accountsince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lastlogintime"/>

            <TextView
                android:id="@+id/lastlogintime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/IPAddress"/>

            <TextView
                android:id="@+id/IPAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"                
                android:textAppearance="?android:attr/textAppearanceMedium" >
            </TextView>

        </TableRow>                                                        

    </TableLayout>

</LinearLayout>
