<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
	<LinearLayout
	    android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" 
		android:id="@+id/layout1"
		android:layout_alignParentTop="true">
	    
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
	        android:src="@drawable/ic_drawer_login_normal"/>
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textAppearance="?android:attr/textAppearanceLarge"
			android:layout_gravity="center_vertical"   
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
			android:layout_weight="1"
	        android:id="@+id/drawerusername"/>
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_alignParentRight="true"
	        android:src="@drawable/ic_action_next_item"/>	    	        
	    
	</LinearLayout>

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
		android:id="@+id/layout2"
		android:paddingTop="10sp"
		android:paddingBottom="10sp"
	    android:orientation="horizontal">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
	        android:src="@drawable/ic_drawer_follow_normal"/>
	    <TextView         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"   
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/top10board"/>
	</LinearLayout>	    
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:id="@+id/layout3">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
			android:src="@drawable/ic_vote_checked"/>
	    <TextView         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
			android:layout_gravity="center_vertical"   
			android:text="@string/recommendboard"/>
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:id="@+id/layout4">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"	        
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
	        android:src="@drawable/ic_thanked"/>
	    <TextView         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"			
			android:layout_gravity="center_vertical"   
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/myfavorite"/>
	</LinearLayout>	
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:id="@+id/layout5">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"	        
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
	        android:src="@drawable/ic_drawer_home_normal"/>
	    <TextView         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"			
			android:layout_gravity="center_vertical"   
	        android:textAppearance="?android:attr/textAppearanceLarge"
	        android:text="@string/allboard"/>
	</LinearLayout>	
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"   
	    android:id="@+id/layout6">
	    <ImageView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"
	        android:src="@drawable/ic_drawer_register_normal"/>
	    <TextView         
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"	        	        
	        android:paddingTop="10sp"
			android:paddingBottom="10sp"			
			android:layout_gravity="center_vertical"   
	        android:textAppearance="?android:attr/textAppearanceLarge"        
	        android:text="@string/mymail"/>
	</LinearLayout>			
</LinearLayout>
